AC_INIT([bolo], [2.0.0], [bugs@niftylogic.com])
AC_PREREQ(2.63)

AC_CONFIG_SRCDIR([include/bolo.h])
AC_CONFIG_AUX_DIR([build])
AC_CONFIG_MACRO_DIR([build])

AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])

AC_PROG_CC
AC_PROG_INSTALL

AC_CONFIG_HEADER([src/config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
